Fixed issues detected by sonar